LUCENE-8738: Fix Luke deprecations