@@ -169,7 +169,7 @@ public final class AnalysisImpl implements Analysis {
 
     try {
       Class<? extends Analyzer> clazz = Class.forName(analyzerType).asSubclass(Analyzer.class);
-      this.analyzer = clazz.newInstance();
+      this.analyzer = clazz.getConstructor().newInstance();
       return analyzer;
     } catch (ReflectiveOperationException e) {
       throw new LukeException(String.format(Locale.ENGLISH, "Failed to instantiate class: %s", analyzerType), e);
